add random code change

--- a/.github/workflows/test-sim.yml
+++ b/.github/workflows/test-sim.yml
@@ -23,9 +23,11 @@ jobs:
       - name: Install & build
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile --ignore-optional
+
       - name: Build
-        run: node_modules/.bin/lerna run build
+        run: yarn run build
         if: steps.cache-deps.outputs.cache-hit == 'true'
+
       # </common-build>
       - name: Simulation single thread test
         run: yarn test:sim:singleThread
