--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,7 @@ jobs:
         run: yarn install --frozen-lockfile --ignore-optional
 
       - name: Build
+        if: steps.cache-deps.outputs.cache-hit == 'true'
         run: yarn run build
       
       # - name: Publish to npm registry
