--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
     name: Build docker image
     runs-on: ubuntu-latest
     needs: [tests-main]
-    if: github.event == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Login to Docker Hub
@@ -50,5 +50,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - run: docker build --tag chainsafe/lodestar:latest .
-      - run: docker push chainsafe/lodestar:latest
+      - run: docker build --tag mpetrunic/lodestar:latest .
+      - run: docker push mpetrunic/lodestar:latest
